# ecs-test-game

./: .gitignore  Cargo.toml  duckdb.hpp  duckdb.lib  sqlite3.lib
benches/: b_clone_identical_entities.rs  b_clone_paint_closest.rs  b_complex_query.rs  b_identical_entities.rs  b_image_editing.rs  b_non_identical_entities.rs  b_paint_closest.rs  b_query_complex.rs  b_units_shooting.rs  bench_utils.rs  benchmarks.rs  identical_entities.rs  identical_entities_velocity.rs  line.rs  paint_closest.rs  query_complex.rs  spatial_array.rs  testbench.rs  violin.rs
src/: basic_legion.rs  db_interface.rs  game_legion.rs  gamesqlite.rs  lib.rs  main.rs  performance_map_legion.rs  relation_per_component.rs  rts.rs  simulation_settings.rs  sqlite.rs  strat.rs  test.txt  test_controller.rs  thread_controller.rs  utils.rs  verslowsql.rs
src/brains/: brain_legion.rs  brain_lpp.rs  brain_rc_ecs.rs  com.rs  ecs_concepts.rs  fancy_pointers.rs  legion_scheduled.rs  legion_sequential.rs  mod.rs  sparsey.rs  sql_flat_table.rs  sql_mass_relations.rs
src/brains/sql_brains/: brain_sql.rs  duckdb.rs  mod.rs  sql_brain.rs  sql_flat_table.rs  sqlite.rs
src/brains/sql_interfaces/: duckdb.rs  mod.rs  postgresql.rs  sqlite.rs
src/challenges/: ch_complex_query.rs  ch_image_editing.rs  ch_image_slideshow.rs  ch_non_identical_entities.rs  ch_paint_closest.rs  ch_units_shooting.rs  get_nearest.rs  identical_entities.rs  image_editing.rs  image_entites.rs  mod.rs  query_challenge.rs  rts.rs  spacial_array.rs
src/legionpp/: cupboard.rs  lpp.rs  mod.rs  pending_entity.rs  unmoving_vec.rs  utils.rs
src/rc_ecs/: cupboard.rs  ecs_macros.rs  mod.rs  rc_ecs.rs  unmoving_vec.rs  utils.rs
src/ui/: mod.rs  ui_settings.rs
