[package]
name = "ecs_test_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.7.0"
legion = "0.4.0"
rand = "*"
egui = "0.18.1"
ggez-egui = "0.2.1"
glam = { version = "0.20", features = ["rand"]}
criterion = { version = "0.4.0", features = ["html_reports", "plotters"] }
heapsize = "0.4.2"
plotters = "0.3.4"

duckdb = "0.6.0"
backtrace = "0.3.66"
rusqlite = "0.28.0"
#sparsey = "0.10.0"
#jemallocator = "0.5"
#jemalloc-sys = {version = "0.5", features = ["stats"]}
#libc = "0.2"
#duckdb = {version = "0.5.1", features = ["bundled"]}

[[bench]]
name = "violin"
harness = false

[[bench]]
name = "line"
harness = false

[[bench]]
name = "testbench"
harness = false

