[package]
name = "ecs_test_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.7.0"
legion = "0.4.0"
rand = "*"
egui = "0.18.1"
ggez-egui = "0.2.1"
glam = { version = "0.20", features = ["rand"]}
futures = "0.3.25"
criterion = { version = "0.4.0", features = ["html_reports", "plotters"] }
heapsize = "0.4.2"
plotters = "0.3.4"
nohash-hasher = "0.2.0"

duckdb = "0.6.0"
backtrace = "0.3.66"
rusqlite = "0.28.0"
sqlx = { version = "0.6", features = [  "runtime-async-std-native-tls", "postgres" ] }
trait-bound-typemap = "0.3.3"

[[bench]]
name = "b_paint_closest"
harness = false

[[bench]]
name = "b_identical_entities"
harness = false

[[bench]]
name = "b_complex_query"
harness = false

[[bench]]
name = "b_units_shooting"
harness = false

[[bench]]
name = "b_image_editing"
harness = false
